--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,7 @@
 //GLOBALS
 @import "./globals/variables";
 @import "./globals/reset";
+@import "./globals/nav";
 
 //VIEWS
 @import "./views/index";
