--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,17 @@ body {
 h1 {
   font-family: 'Patrick Hand SC'; }
 
+.nav-link:hover {
+  color: #ffffff; }
+
+.nav-link.active {
+  font-weight: bold; }
+
+footer .bi {
+  color: white; }
+  footer .bi:hover {
+    color: #f0ac1f; }
+
 .background {
   position: relative;
   overflow: hidden; }
@@ -16,11 +27,21 @@ h1 {
     min-width: 100%;
     min-height: 100%;
     width: auto;
-    height: auto; }
+    height: auto;
+    opacity: 0;
+    animation: fade-in 1.2s cubic-bezier(0.39, 0.575, 0.565, 1) both; }
+    .background img.fade-in {
+      animation-play-state: running; }
   .background .container {
     position: relative; }
     .background .container .bg-white {
       background-color: rgba(255, 255, 255, 0.8); }
+
+@keyframes fade-in {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
 
 .pagina_contacto {
   height: 100vh;
@@ -117,6 +138,16 @@ h1 {
             padding-right: 5px;
             padding-bottom: 100px;
             text-align: justify; } }
+    .about_section .row .slide-in-top {
+      animation: slide-in-top 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both; }
+
+@keyframes slide-in-top {
+  0% {
+    transform: translateY(-1000px);
+    opacity: 0; }
+  100% {
+    transform: translateY(0);
+    opacity: 1; } }
 
 .portfolio_servicios {
   padding-top: 90px;
